<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="textAddToMyMovies">Add to my movies</string>
  <string name="textUpcoming">Upcoming</string>
  <string name="textMovieWatchLater">See Later</string>
  <string name="textInMyMovies">Added to my movies</string>
  <string name="textInMoviesWatchlist">Added to watchlist</string>

  <string name="textMovieActorsEmpty">Actors are not available</string>
  <string name="textMovieTrailer">Trailer</string>
  <string name="textMovieRate">Rate</string>
  <string name="textMovieLink">Link</string>
  <string name="textMovieComments2">Comments</string>
  <string name="textMovieShare">Share</string>
  <string name="textMovieYouMayAlsoLike">You may also like:</string>
  <string name="textMovieVotes">%.1f (%d votes)</string>

  <string name="textMovieExtraInfo">%s %s | %s %s | %s</string>

  <string name="textMovieNotYetReleased">This movie has not been released yet.</string>
  <string name="textMovieManageLists">Manage Lists</string>
  <string name="textMovieManageListsCount">Manage Lists (%d)</string>
  <string name="textTraktSyncMovieRemovedFromTrakt">Trakt.tv synced successfully.</string>
</resources>